--- a/k8s.yaml
+++ b/k8s.yaml
@@ -32,3 +32,11 @@ spec:
         image: byeongjokim/mnist-manage
         ports:
         - containerPort: 8088
+        volumeMounts:
+        - name: data
+          mountPath: /data
+      volumes:
+      - name : data
+        hostPath:
+          path: /data
+          type: Directory
